# Quiz-Generator-App

./: .gitignore  README.md  pyproject.toml
app/: main.py  quiz_app.py
