[tool.poetry]
name = "quiz-generator-app"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "quiz_generator_app"}]

[tool.poetry.dependencies]
python = "3.11.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
