[tool.poetry]
name = "quiz-generator-app"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "quiz_generator_app" }]

[tool.poetry.dependencies]
python = "3.11.3"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
test = "pytest"
run = "python3 -m app.pipeline"
