[tool.poetry]
name = "quiz-generator-app"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{ include = "quiz_generator_app" }]

[tool.poetry.dependencies]
python = "3.11.3"
taskipy = "^1.12.0"
blue = "^0.9.1"
isort = "^5.12.0"
pytest = "^7.4.2"
ipykernel = "^6.25.2"
langchain = "^0.0.284"
openai = "^0.28.0"
streamlit = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
lint = "blue . && isort ."
test = "pytest"
run = "python3 -m app.pipeline"
